albion not showing images fixed

--- a/styles/overwatch.css
+++ b/styles/overwatch.css
@@ -166,9 +166,9 @@ body{
     }
 
     .feaBtns > img{
-        width: 60px;
+        width: 50px;
         padding: 10px;
-        margin: 0 15px;
+        margin: 0 10px;
     }
 
     .txtTitleDiv{
